<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.home.HomeFragment">

    <com.progress.management.custom.CustomHeaderView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:leftDrawable="@drawable/ic_bg_back"
        app:rightDrawable="@drawable/ic_update"
        app:title="@string/str_progress" />

    <LinearLayout
        android:id="@+id/ll_header_table"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/header"
        android:background="@color/md_blue_200"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/roboto_bold_16dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="@dimen/margin_8_dp"
            android:gravity="center_vertical"
            android:text="@string/str_product" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_background" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/roboto_bold_16dp"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_id" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_background" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/roboto_bold_16dp"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_time_line" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_background" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/roboto_bold_16dp"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_date_start" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_background" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/roboto_bold_16dp"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_date_end" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_background" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/roboto_bold_16dp"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_progress_title" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_background" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/roboto_bold_16dp"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_note" />
    </LinearLayout>

    <View
        android:id="@+id/view_line1"
        android:layout_below="@id/ll_header_table"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_background" />

    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_below="@id/view_line1"
        android:background="@color/md_blue_200"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_search"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <com.progress.management.custom.InputView
                android:id="@+id/input_search_project"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_1_dp"
                app:input_hint="@string/str_search"
                app:input_type="search"
                app:background_input_view="@drawable/bg_border_search_text"
                app:color_hint="@color/md_deep_purple_100"
                app:left_drawable="@drawable/ic_search"
                app:type="register"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/img_icon_close_search_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:layout_marginEnd="@dimen/margin_1_dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_background" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_search_id"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <com.progress.management.custom.InputView
                android:id="@+id/input_search_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_1_dp"
                app:input_hint="@string/str_search"
                app:input_type="search"
                app:background_input_view="@drawable/bg_border_search_text"
                app:color_hint="@color/md_deep_purple_100"
                app:type="register"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/img_icon_close_search_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:layout_marginEnd="@dimen/margin_1_dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_background" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/roboto_bold_16dp"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_background" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/roboto_bold_16dp"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_background" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/roboto_bold_16dp"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_background" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/roboto_bold_16dp"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_background" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/roboto_bold_16dp"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="" />
    </LinearLayout>

    <View
        android:id="@+id/view_line2"
        android:layout_below="@id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_background" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view_line2"
        android:background="@color/md_indigo_50">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:brv_padding_bottom="@dimen/margin_10_dp"
            tools:listitem="@layout/item_progress" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>